# skoufas-library

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml  uwsgi.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: lint.yml  tests.yml
books/: __init__.py  admin.py  apps.py  cover_fetcher.py  fields.py  languages.py  models.py  skoufas_classification_classes.py  tests.py  urls.py  validators.py  views.py
books/management/commands/: __init__.py  dbfimport.py  fetchcovers.py
books/migrations/: 0001_initial.py  0001_trigram.py  0002_initial.py
books/static/books/: prism.css  prism.js
books/static/skoufas_library/: site.css
books/templates/books/: author_detail.html  author_list.html  bookentry_cover_fetch.html  bookentry_detail.html  bookentry_image_add.html  bookentry_list.html  bookentry_marc_detail.html  class_list.html  donor_detail.html  donor_list.html  location_detail.html  location_list.html
books/tests/: test_views.py
books/views/: __init__.py  books.py  exports.py  images.py  location.py  people.py
curation/: __init__.py  admin.py  apps.py  models.py  queries.py  urls.py  views.py
curation/migrations/: 0001_initial.py
curation/tests/: test_duplicates.py  test_inventory.py  test_merge_log.py  test_suppression.py
curation/views/: __init__.py  duplicates.py  inventory.py  merge_log.py  suppression.py
docs/: manual-testing.md  manual.el.md  marc.md
loaning/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
loaning/migrations/: 0001_initial.py
loaning/tests/: test_views.py
scripts/: lint  restart  restart-venv  update-messages
skoufas_library_project/: __init__.py  asgi.py  cli.py  settings.py  tests.py  urls.py  views.py  wsgi.py
templates/skoufas_library/: about.html  bootstrap.html  contact.html  home.html  layout.html  manual.html  privacy_policy.html  search_results.html
(+34 files in other folders)
