[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name =  "skoufas-library"
authors = [
    {name = "Claudio Bantaloukas", email = "rockreamer@gmail.com"},
]
description = "Django Web Application for managing Skoufas library catalog"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "Django>=4.1.3",
    "psycopg2>=2.9.5",
    "django-bootstrap-v5",
    "pytz==2022.6",
    "skoufas-dbf-reader==0.0.1",
    "python-stdnum==1.18",
]

[project.optional-dependencies]
test = [
    "autopep8==2.0.0",
    "bandit[toml]==1.7.4",
    "black==22.10.0",
    "check-manifest==0.48",
    "django-stubs[compatible-mypy]==1.13.0",
    "djlint==1.19.7",
    "flake8-bugbear==22.10.27",
    "flake8-docstrings",
    "flake8-formatter_junit_xml",
    "flake8==5.0.4",
    "mypy==0.982",
    "pre-commit==2.20.0",
    "pylint_junit",
    "pylint==2.15.5",
    "pytest-cov==4.0.0",
    "pytest-github-actions-annotate-failures",
    "pytest-mock<3.10.1",
    "pytest-runner",
    "pytest==7.2.0",
    "shellcheck-py==0.8.0.4"
]


[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "skoufas_library_project.settings"

[project.scripts]
skoufas-library = "manage:main"
"manage.py" = "manage:main"

[project.urls]
Documentation = "https://github.com/skoufas/skoufas-library#readme"
Source = "https://github.com/skoufas/skoufas-library"
Tracker = "https://github.com/skoufas/skoufas-library/issues"

[tool.black]
line-length = 120
fast = true

[tool.flit.module]
name = "skoufas_library_project"

